<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <artifactId>rdm-ui-test</artifactId>

    <parent>
        <groupId>ru.i-novus.ms.rdm</groupId>
        <artifactId>rdm</artifactId>
        <version>4.26.0-SNAPSHOT</version>
    </parent>

    <properties>
        <java.version>21</java.version>
        <encoding>UTF-8</encoding>

        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>

        <!-- Нужна как минимум версия 7.3.2 ! -->
        <!--<selenide.version>7.5.1</selenide.version>-->
        <!-- Минимальная версия 4.21.0 для Chrome v.125 ! -->
        <!--<selenium.version>4.25.0</selenium.version>-->
        <!-- Минимальная версия 33.2.0-jre из Selenide v.7.3.2 ! -->
        <!--<google-guava.version>33.3.0-jre</google-guava.version>-->
        <!--<allure-junit5.version>2.27.0</allure-junit5.version>-->

        <!-- From:
         ? n2o-boot-platform
         - org.springframework.data/spring-data-jpa
         - org.springframework.data/spring-data-commons
         - org.springframework.hateoas/spring-hateoas
         -->
        <maven-surefire-plugin.version>3.2.5</maven-surefire-plugin.version>
        <!-- From:
         - net.n2oapp.framework/framework
         -->
        <allure-maven.version>2.10.0</allure-maven.version>

        <commons.rng.version>1.6</commons.rng.version>

        <jacoco.skip>false</jacoco.skip>
    </properties>

    <dependencies>
        <dependency>
            <groupId>net.n2oapp.framework</groupId>
            <artifactId>n2o-autotest</artifactId>
            <version>${n2o.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-rng-simple</artifactId>
            <version>${commons.rng.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>

                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>

                <configuration>
                    <testFailureIgnore>false</testFailureIgnore>
                    <includes>
                        <include>**/*Test.java</include>
                    </includes>
                    <argLine>
                        -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
                    </argLine>
                    <properties>
                        <property>
                            <name>listener</name>
                            <value>io.qameta.allure.junit5.AllureJunit5</value>
                        </property>
                    </properties>
                    <systemPropertyVariables>
                        <allure.results.directory>${project.basedir}/allure-results</allure.results.directory>
                        <junit.jupiter.extensions.autodetection.enabled>true</junit.jupiter.extensions.autodetection.enabled>
                    </systemPropertyVariables>
                </configuration>

                <dependencies>
                    <dependency>
                        <groupId>org.aspectj</groupId>
                        <artifactId>aspectjweaver</artifactId>
                        <version>${aspectj.version}</version>
                    </dependency>
                    <dependency>
                        <groupId>org.junit.jupiter</groupId>
                        <artifactId>junit-jupiter-api</artifactId>
                        <version>${junit-jupiter.version}</version>
                    </dependency>
                    <dependency>
                        <groupId>org.junit.jupiter</groupId>
                        <artifactId>junit-jupiter-engine</artifactId>
                        <version>${junit-jupiter.version}</version>
                    </dependency>
                </dependencies>
            </plugin>

            <plugin>
                <groupId>io.qameta.allure</groupId>
                <artifactId>allure-maven</artifactId>
                <version>${allure-maven.version}</version>

                <configuration>
                    <reportDirectory>allure-report</reportDirectory>
                    <resultsDirectory>../allure-results</resultsDirectory>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>